--- a/index.html
+++ b/index.html
@@ -284,25 +284,17 @@
               <img src="./image/yadav.jpeg" alt="Roshani">
               
             </div>
-            <p class="card-desc">I’m a freelance web designer and developer based in Bangladesh. I love the Web platform
-              and I need to improve it for
-              everybody. What's more, I believe myself to be totally honored that I will assemble it professionally.</p>
-            <h3 class="card-name">AMY Jr</h3>
-            <p class="card-sub-title">CEO of My Com</p>
+            
+            <h3 class="card-name">Roshani</h3>
+            <h3 class="card-name">Yadav</h3>
+            <p class="card-desc" style="padding-top: 30px;">FullStack Development<br><br> MERN <br><br> Core Java <br></p>
           </div>
         </div>
         <div class="right">
-          <p class="subheading">Hi! This is AMY</p>
-          <h2 class="slogan">Freelance Web Designer</h2>
-          <p class="right-text">I work with companies and agencies around the world, building Web sites and application
-            UIs with strong focus on
-            responsive design, accessibility, performance, and the latest in the area of front-end (Javascript, react,
-            gatsby, node,
-            Python, djengo)
-            I also speak and run workshops across the globe, also focusing on CSS, SVG, Responsive Design and
-            accessibility,
-            covering practical tips on how to build full stack using modern tools and techniques that scale and are
-            future-proof.
+          <p class="subheading">Hi! This is Roshani</p>
+          <!-- <h2 class="slogan">Freelance Web Designer</h2> -->
+          <p class="right-text">MCA student at Medicaps University, Indore with a CGPA of 8.43/10 and a B.Sc. from Devi Ahilya Vishwavidyalaya. Proficient in HTML, CSS, JavaScript, core Java, and SQL with hands-on experience in web development. Currently advancing skills in React and seeking impactful opportunities in a growth-driven organization.
+
           </p>
           <div class="buttons">
             <a href="./resume.txt" class="primary-btn" download="">Download Resume</a>
